# challenge-codebase

./: .gitignore  README.md  pyproject.toml
docs/: data-background.md  reconstruction.md  rules.md  submission-guide.md  tips-and-faq.md
src/baseline/: Dockerfile
src/evaluation/metrics/: ct_whole_body_mae.py
src/recon/: ct_to_acf.py  main.py
