[project]
name = "challenge-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nibabel>=5.3.3",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
